k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sign-language-detector-service
  labels:
    app: sign-language-detector
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: sign-language-detector
